[package]
name = "cdk-wallet-snippets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bip39 = { version = "2.0", features = ["rand"] }
# --8<-- [start:cdk-deps]
cdk = { version = "0.7.2", features = ["wallet"] }
cdk-sqlite = { version = "0.7.1", features = ["wallet"] }
# --8<-- [end:cdk-deps]
