[package]
name = "cdk-wallet-snippets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bip39 = { version = "2.0", features = ["rand"] }
# --8<-- [start:cdk-deps]
#cdk = { version = "0.8.1", features = ["wallet"] }
#cdk-sqlite = { version = "0.8.1", features = ["wallet"] }

cdk = { git = "https://github.com/ok300/cdk", branch = "ok300-add-expect-wallet", features = ["wallet"] }
cdk-sqlite = { git = "https://github.com/ok300/cdk", branch = "ok300-add-expect-wallet", features = ["wallet"] }
# --8<-- [end:cdk-deps]
